overflow in the x-direction is fixed with this change...

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -16,7 +16,7 @@
 
 html,
 body {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
